Changes from V8.5 to V8.6beta1
==============================

Bugfixes

- #4527: when typechecking the statement of a lemma using universe polymorphic
  definitions with explicit universe binders, check that the type can indeed be
  typechecked using only those universes (after minimization of the other,
  flexible universes), or raise an error (fixed scripts can be made forward
  compatible).
- #4726: treat user-provided sorts of universe polymorphic records as rigid
  (i.e. non-minimizable).
- #4592, #4932: notations sharing recursive patterns or sharing
  binders made more robust.
- #4780: Induction with universe polymorphism on was creating ill-typed terms.
- #3070: fixing "subst" in the presence of a chain of dependencies.
- When used as an argument of an ltac function, "auto" without "with"
  nor "using" clause now correctly uses only the core hint database by
  default.

Specification language

- Giving implicit arguments explicitly to a constant with multiple
  choices of implicit arguments does not break any more insertion of
  further maximal implicit arguments.
- Ability to put any pattern in binders, prefixed by quote, e.g.
  "fun '(a,b) => ...", "λ '(a,(b,c)), ...", "Definition foo '(x,y) := ...".
  It expands into a "let 'pattern := ..."

Tactics

- Flag "Bracketing Last Introduction Pattern" is now on by default.
- Flag "Regular Subst Tactic" is now on by default: it respects the
  initial order of hypothesis, it contracts cycles, it unfolds no
  local definitions (common source of incompatibilities, fixable by
  "Unset Regular Subst Tactic").
- New flag "Refolding Reduction", now disabled by default, which turns
  on refolding of constants/fixpoints (as in cbn) during the reductions
  done during type inference and tactic retyping. Can be extremely
  expensive. When set off, this recovers the 8.4 behaviour of unification
  and type inference. Potential source of incompatibility with 8.5 developments
  (the option is set on in Compat/Coq85.v).